--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -18,7 +18,7 @@
             <div class="row no-gutters">
                 <div class="col-md-4">4</div> <!--"col--#" Columns # in any bootstrap row add up to 12-->
                 <div class="col-md-4">4</div> <!--"col-md-4" can be xs,sm,md,lg,xl Breakpoints of columns. Collapses into 1 column-->
-                <div class="col-md-4">4</div> <!--xs = mobile on portrait-->
+                <div class="col-md-4">4</div>
             </div>
             
             <div class="row no-gutters"> <!--no padding in cells-->
