--- a/javascript_intro/javascript_intro.html
+++ b/javascript_intro/javascript_intro.html
@@ -5,10 +5,11 @@
         <title>JavaScript Intro</title>
     </head>
     <body>
-        jaaava
+        jaaavar
         
         <script>
-            
+            console.log('Hello World');
+            document.write('Hello World');
         </script>
     </body>
 
