--- a/javascript_intro/identikit/identikit.html
+++ b/javascript_intro/identikit/identikit.html
@@ -51,7 +51,7 @@
 
     <div id="controls">
         <a id="eyes_up_btn">move eyes up</a>
-        <a>move eyes down</a>
+        <a id="eyes_down_btn">move eyes down</a>
         <a>move eyes closer together</a>
         <a>move eyes further apart</a>
         <a>hollow eyes</a>
@@ -76,18 +76,30 @@
         var eye_left_y = 100;
         var eye_right_x = 250;
         var eye_right_y = 100;
+        var mouth_x = 100;
+        var mouth_y = 220;
 
         // set initial positions
         document.getElementById('eye_left').style.left = eye_left_x + 'px';
         document.getElementById('eye_left').style.top = eye_left_y + 'px';
         document.getElementById('eye_right').style.left = eye_right_x + 'px';
         document.getElementById('eye_right').style.top = eye_right_y + 'px';
+        
+        document.getElementById('mouth').style.left = mouth_x + 'px';
+        document.getElementById('mouth').style.top = mouth_y + 'px';
 
         // move eyes up event listener
         document.getElementById('eyes_up_btn').addEventListener('click', function() {
             eye_left_y -= 10;
             document.getElementById('eye_left').style.top = eye_left_y + 'px';
             eye_right_y -= 10;
+            document.getElementById('eye_right').style.top = eye_right_y + 'px';
+        });
+        
+        document.getElementById('eyes_down_btn').addEventListener('click', function() {
+            eye_left_y += 10;
+            document.getElementById('eye_left').style.top = eye_left_y + 'px';
+            eye_right_y += 10;
             document.getElementById('eye_right').style.top = eye_right_y + 'px';
         });
     </script>
